# rhttp-server

./: Cargo.toml  README.md
boot/: Cargo.toml
boot/src/: main.rs
config/: Cargo.toml  dispatch.json  mime.json  mime.types  status.json
core/: Cargo.toml
core/src/: thread.rs
http/: Cargo.toml
http/src/: config.rs  httprequest.rs  httpresponse.rs  lib.rs  mimetype.rs  mine.rs  status.rs
public/: 404.html  index.html  index.js
router/: Cargo.toml
router/src/: lib.rs  parser.rs
router/src/handler/: api.rs  mod.rs  staticres.rs
tcp/: Cargo.toml
tcp/src/: main.rs
utils/src/: lib.rs
