[package]
name = "http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
serde_json = "1.0.73"
utils = { path = "../utils" }
#futures-lite = "1.12.0"
futures = "0.3.19"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
